salesforce/force-app/main/default/objects/DentShift_Consultation__c/DentShift_Consultation__c.object-meta.xml
<CustomObject>
    <label>DENT SHIFT相談予約</label>
    <pluralLabel>DENT SHIFT相談予約</pluralLabel>
    <description>DENT SHIFT連携で作成・更新するレコード(外部IDでupsert)。</description>
    <nameField>
        <label>相談予約名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>