salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Account__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Account__c</fullName>
    <label>取引先</label>
    <description>取引先(会員登録済みの医院のみ)</description>
    <inlineHelpText>取引先(会員登録済みの医院のみ)</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>DentShift_Consultations</relationshipName>
    <relationshipLabel>DENT SHIFT相談予約</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>