salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Attendance__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Attendance__c</fullName>
    <label>相談の実施結果</label>
    <description>相談の実施結果(担当者が入力。同期では書き込まない)</description>
    <inlineHelpText>相談の実施結果(担当者が入力。同期では書き込まない)</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>未記録</fullName>
                    <default>true</default>
                    <label>未記録</label>
                </value>
                <value>
                    <fullName>実施</fullName>
                </value>
                <value>
                    <fullName>不参加</fullName>
                </value>
                <value>
                    <fullName>日程変更</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>