salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Booked_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Booked_At__c</fullName>
    <label>予約日時</label>
    <description>予約日時(TimeRexで予約された時刻)</description>
    <inlineHelpText>予約日時(TimeRexで予約された時刻)</inlineHelpText>
    <type>DateTime</type>
</CustomField>