salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Booking_Status__c</fullName>
    <label>予約状態</label>
    <description>予約状態(予約成立/キャンセル。TimeRex通知の値)</description>
    <inlineHelpText>予約状態(予約成立/キャンセル。TimeRex通知の値)</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>