salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Calendar_Name__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Calendar_Name__c</fullName>
    <label>TimeRexカレンダー名</label>
    <description>TimeRexカレンダー名</description>
    <inlineHelpText>TimeRexカレンダー名</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>