salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Canceled_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Canceled_At__c</fullName>
    <label>キャンセル日時</label>
    <description>キャンセル日時</description>
    <inlineHelpText>キャンセル日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>