salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Clinic_Id__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Clinic_Id__c</fullName>
    <label>DENT SHIFTの医院ID</label>
    <description>DENT SHIFTの医院ID(リード・取引先と同じ値)</description>
    <inlineHelpText>DENT SHIFTの医院ID(リード・取引先と同じ値)</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
</CustomField>