salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Contact__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Contact__c</fullName>
    <label>予約した担当者</label>
    <description>予約した担当者(会員と一致した場合のみ)</description>
    <inlineHelpText>予約した担当者(会員と一致した場合のみ)</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DentShift_Consultations</relationshipName>
    <relationshipLabel>DENT SHIFT相談予約</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>