salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_End_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_End_At__c</fullName>
    <label>相談終了日時</label>
    <description>相談終了日時</description>
    <inlineHelpText>相談終了日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>