salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Host_Name__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Host_Name__c</fullName>
    <label>TimeRexの担当</label>
    <description>TimeRexの担当(ホスト)</description>
    <inlineHelpText>TimeRexの担当(ホスト)</inlineHelpText>
    <type>Text</type>
    <length>80</length>
</CustomField>