salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Match_Method__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Match_Method__c</fullName>
    <label>医院との対応付け方法</label>
    <description>医院との対応付け方法(signed_ref/contact_email)</description>
    <inlineHelpText>医院との対応付け方法(signed_ref/contact_email)</inlineHelpText>
    <type>Text</type>
    <length>20</length>
</CustomField>