salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Staff_Notes__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Staff_Notes__c</fullName>
    <label>担当者メモ</label>
    <description>担当者メモ(同期では書き込まない)</description>
    <inlineHelpText>担当者メモ(同期では書き込まない)</inlineHelpText>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>