salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_Start_At__c.field-meta.xml
<CustomField>
    <fullName>DentShift_Start_At__c</fullName>
    <label>相談開始日時</label>
    <description>相談開始日時</description>
    <inlineHelpText>相談開始日時</inlineHelpText>
    <type>DateTime</type>
</CustomField>