salesforce/force-app/main/default/objects/DentShift_Consultation__c/fields/DentShift_TimeRex_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>DentShift_TimeRex_Event_Id__c</fullName>
    <label>TimeRexの予約ID</label>
    <description>TimeRexの予約ID(外部ID・一意)</description>
    <inlineHelpText>TimeRexの予約ID(外部ID・一意)</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>